# extract-subtitle-from-video

./: .gitignore  main.py  pyproject.toml
